syntax = "proto3";
package leo.status;
option go_package = "github.com/go-leo/leo/v3/proto/leo/status;status";

import "google/protobuf/any.proto";
import "google/rpc/code.proto";

// HttpBody is the http body.
// see: https://google.aip.dev/193 HTTP/1.1+JSON representation
message HttpBody {
  message Status {
    // The HTTP status code that corresponds to `google.rpc.Status.code`.
    int32 code = 1;
    // This corresponds to `google.rpc.Status.message`.
    string message = 2;
    // This is the enum version for `google.rpc.Status.code`.
    google.rpc.Code status = 3;
    // This distinguish between two Status objects as being the same when
    // both code and status are identical.
    string identifier = 4;
    // This corresponds to `google.rpc.Status.details`.
    repeated google.protobuf.Any details = 5;
  }

  Status error = 1;
}